--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ pytz==2020.1
 sqlparse==0.3.1
 whitenoise==5.2.0
 youtube-dl==2020.12.14
+psycopg2==2.9.3
+python-decouple==3.6
+django-heroku==0.3.1
